[package]
name = "band-std-reference-contracts-soroban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soroban-sdk = "0.8.4"

[dev-dependencies]
soroban-sdk = { version = "0.8.4", features = ["testutils"] }