[lib]
crate-type = ["cdylib"]

[package]
name = "std-reference"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "20.3.0"

[dev-dependencies]
soroban-sdk = { version = "20.3.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
